add PlatformIO library.json

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=cronos
-version=0.1.3
+version=0.1.4
 author=ardnew
 maintainer=ardnew (andrew@ardnew.com)
 sentence=A std::chrono wrapper for target system's native tick count.
@@ -7,4 +7,4 @@ paragraph=This abstraction allows applications to hide the exact data type repre
 category=Timing
 url=https://github.com/ardnew/cronos
 architectures=*
-includes=cronos.h
+includes=cronos.hpp
